# ArcForge

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: license-check.yml
apps/asr/client/src/: main-client.cpp
apps/asr/server/include/: asr-task-sherpa.h
apps/asr/server/src/: asr-task-sherpa.cpp  main-server.cpp
cmake/: ArcFunctions.cmake
cmake/toolchains/: aarch64-toolchain.cmake  rv1126bp.cmake
docs/: ADD_NEW_SOC.md  BUILD_SYSTEM.md  README_ZH_CN.md
docs/zh-cn/: README_ZH_CN.md
libs/asr_engine/: CMakeLists.txt
libs/asr_engine/include/ASREngine/common/: system-info.h
libs/asr_engine/include/ASREngine/recognizer/: recognizer.h
libs/asr_engine/include/ASREngine/recognizer/impl/: recognizer-impl.h
libs/asr_engine/include/ASREngine/vad/impl/: vad-impl.h
libs/asr_engine/include/ASREngine/wav-reader/: wav-reader.h
libs/asr_engine/src/common/: CMakeLists.txt  system-info.cpp
libs/asr_engine/src/recognizer/: CMakeLists.txt  recognizer-config.cpp  recognizer.cpp
libs/asr_engine/src/recognizer/impl/: recognizer-impl.cpp
libs/asr_engine/src/vad/: CMakeLists.txt  vad-config.cpp  vad.cpp
libs/asr_engine/src/vad/impl/: vad-impl.cpp
libs/asr_engine/src/wav-reader/: CMakeLists.txt  wav-reader-backup.cpp  wav-reader.cpp
libs/network/include/Network/: pch.h
libs/network/include/Network/base/: base.h
libs/network/include/Network/base/impl/: base-impl.h
libs/network/include/Network/client/: client.h
libs/network/include/Network/common/: system-info.h
libs/network/include/Network/server/: server.h
libs/network/src/base/: CMakeLists.txt  base-config.cpp  base.cpp
libs/network/src/base/impl/: base-impl.cpp
libs/network/src/client/: CMakeLists.txt  client.cpp
libs/network/src/common/: CMakeLists.txt  common-types.cpp  system-info.cpp
libs/network/src/server/: CMakeLists.txt  server.cpp
libs/utils/include/Utils/common/: system-info.h
libs/utils/include/Utils/logger/: logger-old.h  logger.h
libs/utils/include/Utils/logger/worker/: log_entry.h  logsink.h
libs/utils/src/common/: CMakeLists.txt  system-info.cpp
libs/utils/src/logger/: CMakeLists.txt  logger-old.cpp  logger.cpp
libs/utils/src/logger/worker/: CMakeLists.txt  consolesink.cpp  filesink.cpp
